implement savings goals module and technical documentation